<resources>
    <string name="app_name">Foodlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_text">225 Central Park West, NY 10024, USA</string>
    <string name="pickup">Pickup</string>
    <string name="catering">Catering</string>
    <string name="curbside">Curbside</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="_58">58</string>
    <string name="stores_open">stores Open</string>
    <string name="menu">Menu</string>
    <string name="search_product_by_name">Search product by name</string>
    <string name="more_info">More Info</string>
    <string name="km_away">km away</string>
    <string name="burger_craze">Burger Craze</string>
    <string name="open">OPEN</string>
    <string name="american">American</string>
    <string name="burgers">Burgers</string>
    <string name="delivery">Delivery:</string>
    <string name="free">FREE</string>
    <string name="minimum">Minimum:</string>
    <string name="around_n30_minutes">around\n30 minutes</string>
    <string name="min">min</string>
    <string name="takeaways">Takeaways</string>
</resources>